fix: global letter-spacing rule changed to wild card to avoid form elements not inheriting

--- a/packages/core/src/scss/_component.scss
+++ b/packages/core/src/scss/_component.scss
@@ -8,5 +8,9 @@ html {
   color: $grey-900;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+/* global setting for letter-spacing. implemented via wildcard to avoid form elements not inheriting the style */
+* {
   letter-spacing: $letter-spacing;
 }
